fix alignment of text

--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -84,6 +84,8 @@ span {
   line-height: 28px;
   margin: 20px 0;
   width: 100%;
+  text-align: justify;
+  text-align-last: center;
 }
 
 #cursive {
